--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 	padding: 20px;
 	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 	text-align: center;
-	max-width: 300px;
-	backdrop-filter: blur(5px); /* Размытие для лучшей читаемости */
+	max-width: 600px;
+	backdrop-filter: blur(5px);
 	position: relative;
 	z-index: 1;
 }
@@ -42,10 +42,12 @@ body {
 }
 
 .control-button {
-	width: 40px;
-	height: 40px;
+	width: 20px;
+	height: 20px;
 	cursor: pointer;
-	transition: transform 0.2s ease;
+	transition: transform 0.2s ease, opacity 0.2s ease;
+	mix-blend-mode: multiply;
+	opacity: 0.7;
 }
 
 .control-button:hover {
@@ -56,8 +58,16 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	color: #107557;
 }
 
+#track-title {
+	color: #007bff;
+}
+
+#track-artist {
+	color: #007bff;
+}
 #progress-bar {
 	width: 150px;
 	margin-right: 10px;
@@ -88,7 +98,7 @@ body::before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url('cover1.jpg'); /* Фон обложки */
+	background-image: var(--background-image); /* Фон обложки */
 	background-size: cover;
 	background-position: center;
 	filter: blur(10px); /* Размытие */
