--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	color: #107557;
+	color: #007bff;
 }
 
 #track-title {
@@ -72,7 +72,9 @@ body {
 	width: 150px;
 	margin-right: 10px;
 }
-
+#next {
+	opacity: 1;
+}
 footer {
 	margin-top: 20px;
 }
@@ -98,10 +100,10 @@ body::before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: var(--background-image); /* Фон обложки */
+	background-image: var(--background-image);
 	background-size: cover;
 	background-position: center;
-	filter: blur(10px); /* Размытие */
-	opacity: 0.5; /* Полупрозрачность */
+	filter: blur(10px);
+	opacity: 0.5;
 	z-index: -1;
 }
